更新源代码

--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,7 @@ links_title: Links
 # links
 links:
   MacTalk: http://macshuo.com/
+  Ymming: http://blog.ymming.com/
 
 # 多说热评文章 true 或者 false
 # duoshuo_hotartical: true
