--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 - cp ssh_config ~/.ssh/config
 - git config --global user.name "Waydrow"
 - git config --global user.email Waydrow@163.com
+- git clone -b gh-pages git@github.com:Waydrow/My-Blog.git .deploy_git
 
 install:
 - npm install hexo-cli -g
