--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,20 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv
-  -in travis_id_rsa.enc -out ~/.ssh/travis_id_rsa -d
-- chmod 600 ~/.ssh/travis_id_rsa
+  -in travis_CI_id_rsa.enc -out ~/.ssh/travis_CI_id_rsa -d
+- chmod 600 ~/.ssh/travis_CI_id_rsa
 - eval $(ssh-agent)
-- ssh-add ~/.ssh/travis_id_rsa
+- ssh-add ~/.ssh/travis_CI_id_rsa
 - cp ssh_config ~/.ssh/config
 - git config --global user.name "Waydrow"
-- git config --global user.email Waydrow@163.com
+- git config --global user.email waydrow@163.com
 - git clone -b gh-pages git@github.com:Waydrow/My-Blog.git .deploy_git
 install:
 - npm install hexo-cli -g
 - npm install
 - npm install hexo-generator-feed --save
-- npm install hexo-generator-sitemap --save
 - npm install hexo-deployer-git --save
+- npm install hexo-generator-sitemap --save
 script:
 - hexo clean
 - hexo g
