--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv
-  -in travis_CI_id_rsa.enc -out ~/.ssh/travis_CI_id_rsa -d
-- chmod 600 ~/.ssh/travis_CI_id_rsa
+  -in travis_CI_id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
-- ssh-add ~/.ssh/travis_CI_id_rsa
+- ssh-add ~/.ssh/id_rsa
 - cp ssh_config ~/.ssh/config
 - git config --global user.name "Waydrow"
 - git config --global user.email waydrow@163.com
