10th test travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ branches:
   only:
   - master
 before_install:
-- openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv
-  -in travis_CI_id_rsa.enc -out ~/.ssh/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv -in travis_CI_id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
@@ -21,6 +20,6 @@ install:
 - npm install hexo-deployer-git --save
 - npm install hexo-generator-sitemap --save
 script:
-- hexo clean
-- hexo g
-- hexo d
+# - hexo clean
+- hexo generate
+- hexo deploy
