14th test travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: node_js
 node_js:
 - '0.12'
-sudo: true
 branches:
   only:
   - master
 before_install:
-- sudo apt-get update
-- sudo apt-get install openssl
-- openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv -in travis_CI_id_rsa.enc -out ~/.ssh/id_rsa -d
+- sudo openssl aes-256-cbc -K $encrypted_0a740d02c24d_key -iv $encrypted_0a740d02c24d_iv -in travis_CI_id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
