--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -64,6 +64,7 @@ friends:
   执凉: http://blog.lzkzhiliang.com/
   Netcan: http://www.netcan666.com/
   墨: http://lyeec.me/
+  DIYgod: https://www.anotherhome.net
 
 #是否开启“关于我”。
 #不开启——
