添加友链 稗田千秋

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -65,6 +65,7 @@ friends:
   Netcan: http://www.netcan666.com/
   墨: http://lyeec.me/
   DIYgod: https://www.anotherhome.net
+  稗田千秋: https://wind.moe
 
 #是否开启“关于我”。
 #不开启——
