添加友链 世平阜康

--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -66,6 +66,7 @@ friends:
   墨: http://lyeec.me/
   DIYgod: https://www.anotherhome.net
   稗田千秋: https://wind.moe
+  世平阜康: http://luuman.github.io/Home/H1/index.html
 
 #是否开启“关于我”。
 #不开启——
