--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -67,6 +67,7 @@ friends:
   DIYgod: https://www.anotherhome.net
   稗田千秋: https://wind.moe
   世平阜康: http://luuman.github.io/Home/H1/index.html
+  Fevering: http://fevering.cn
 
 #是否开启“关于我”。
 #不开启——
