--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -71,6 +71,7 @@ friends:
   魏来: http://weilai5432.github.io/
   小忆: http://www.smallyi.com
   wixy: http://wixy.top/
+  胡博靖: http://hubojing.github.io/
 
 #是否开启“关于我”。
 #不开启——
