--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -70,7 +70,7 @@ friends:
   Fevering: http://fevering.cn
   魏来: http://weilai5432.github.io/
   小忆: http://www.domeyi.com
-  wixy: http://wixy.top/
+  Wang Yu's Blog: http://blog.iwangyu.cn
   胡博靖: http://hubojing.github.io/
 
 #是否开启“关于我”。
