--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -72,6 +72,7 @@ friends:
   小忆: http://www.domeyi.com
   Wang Yu's Blog: http://blog.iwangyu.cn
   胡博靖: http://hubojing.github.io/
+  ZeeCoder: http://zcheng.ren
 
 #是否开启“关于我”。
 #不开启——
