--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-less": "^0.1.3",
     "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-sass": "^0.3.1",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
   }
