--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.0"
+    "version": "3.5.0"
   },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-deployer-git": "^0.1.0",
+    "hexo-deployer-git": "^0.3.1",
+    "hexo-fs": "^0.2.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.1.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-jade": "^0.3.0",
     "hexo-renderer-less": "^0.1.3",
     "hexo-renderer-marked": "^0.2.10",
-    "hexo-renderer-sass": "^0.3.1",
+    "hexo-renderer-pug": "0.0.5",
+    "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.2"
   }
 }
