--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -99,7 +99,7 @@ links:
     url: http://zcheng.ren
   - title: 文科中的技术宅
     url: https://townwang.com/
-  - title: 刘伟的博客
+  - title: 刘伟
     url: https://darrenliuwei.com/
 
 timeline:
