--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -90,7 +90,7 @@ links:
   - title: 魏来
     url: http://weilai5432.github.io/
   - title: 小忆
-    url: http://www.domeyi.com
+    url: https://blog.iiwo.vip
   - title: Wang Yu's Blog
     url: http://blog.iwangyu.cn
   - title: 胡博靖
