update friend info

--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -91,8 +91,8 @@ links:
     url: http://weilai5432.github.io/
   - title: 小忆
     url: https://blog.iiwo.vip
-  - title: Wang Yu's Blog
-    url: http://blog.iwangyu.cn
+  - title: Ultron Blog
+    url: https://blog.wixy.cn
   - title: 胡博靖
     url: http://hubojing.github.io/
   - title: ZeeCoder
