--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Waydrow
-subtitle: 为着美好生活而努力奋斗的程序猿
-description: 为着美好生活而努力奋斗的程序猿
-author: Waydrow
+title: 北海要多想
+subtitle: 生活中只有一种英雄主义，那就是在认清生活真相之后依然热爱生活
+description: 生活中只有一种英雄主义，那就是在认清生活真相之后依然热爱生活
+author: Zuowu Zheng
 language: zh-CN
-email: Waydrow@163.com
+email: wozhengzw@gmail.com
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://blog.waydrow.com
-enforce_ssl: blog.waydrow.com
+url: https://blog.zhengzw.me
+enforce_ssl: blog.zhengzw.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
