--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "version": "3.9.0"
   },
   "dependencies": {
+    "clean-css": ">=4.1.11",
+    "constantinople": ">=3.1.1",
+    "cryptiles": ">=4.1.2",
     "hexo": "^3.7.1",
     "hexo-deployer-git": "^0.3.1",
     "hexo-fs": "^0.2.2",
@@ -23,9 +26,7 @@
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2",
-    "cryptiles": ">=4.1.2",
-    "hoek": ">=4.2.1",
-    "constantinople": ">=3.1.1",
-    "clean-css": ">=4.1.11"
+    "hexo-tag-aplayer": "^3.0.4",
+    "hoek": ">=4.2.1"
   }
 }
