change info of friends

--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -86,10 +86,8 @@ links:
     url: https://www.anotherhome.net
   - title: 稗田千秋
     url: https://wind.moe
-  - title: 世平阜康
-    url: http://luuman.github.io/Home/H1/index.html
   - title: Fevering
-    url: http://fevering.cn
+    url: http://fevering.cn/
   - title: 魏来
     url: http://weilai5432.github.io/
   - title: 小忆
@@ -99,9 +97,7 @@ links:
   - title: 胡博靖
     url: http://hubojing.github.io/
   - title: ZeeCoder
-    url: http://zcheng.ren
-  - title: 文科中的技术宅
-    url: https://townwang.com/
+    url: https://zcheng.ren/
   - title: 刘伟
     url: https://darrenliuwei.com/
 
