--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "constantinople": ">=3.1.1",
     "cryptiles": ">=4.1.2",
     "hexo": "^3.7.1",
-    "hexo-deployer-git": "^0.3.1",
-    "hexo-fs": "^0.2.2",
+    "hexo-deployer-git": "^2.1.0",
+    "hexo-fs": "^3.1.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.1.0",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-sitemap": "^1.1.2",
+    "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-jade": "^0.4.1",
     "hexo-renderer-less": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.10",
-    "hexo-renderer-pug": "0.0.5",
+    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2",
